--- a/notebooks/api-exploration.ipynb
+++ b/notebooks/api-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,16 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<openaq._sync.client.OpenAQ at 0x7fd1fd97acf0>"
+       "<openaq._sync.client.OpenAQ at 0x7f6d1856f620>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "Meta(name='openaq-api', website='/', page=1, limit=1000, found=716)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,57 +71,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 407,\n",
-       " 'name': 'Zoo Park, Hyderabad - TSPCB',\n",
+       "{'id': 5569,\n",
+       " 'name': 'Punjab Agricultural University, Ludhiana - PPCB',\n",
        " 'locality': None,\n",
        " 'timezone': 'Asia/Kolkata',\n",
        " 'country': CountryBase(id=9, code='IN', name='India'),\n",
-       " 'owner': OwnerBase(id=8533, name='Telangana State Pollution Control Board'),\n",
+       " 'owner': OwnerBase(id=8526, name='Punjab Pollution Control Board'),\n",
        " 'provider': ProviderBase(id=168, name='CPCB'),\n",
        " 'is_mobile': False,\n",
        " 'is_monitor': True,\n",
        " 'instruments': [InstrumentBase(id=2, name='Government Monitor'),\n",
        "  InstrumentBase(id=2, name='Government Monitor')],\n",
-       " 'sensors': [SensorBase(id=12235578, name='co ppb', parameter=ParameterBase(id=102, name='co', units='ppb', display_name='CO')),\n",
-       "  SensorBase(id=710, name='co µg/m³', parameter=ParameterBase(id=4, name='co', units='µg/m³', display_name='CO mass')),\n",
-       "  SensorBase(id=12235579, name='no ppb', parameter=ParameterBase(id=24, name='no', units='ppb', display_name='NO')),\n",
-       "  SensorBase(id=712, name='no2 µg/m³', parameter=ParameterBase(id=5, name='no2', units='µg/m³', display_name='NO₂ mass')),\n",
-       "  SensorBase(id=12235580, name='no2 ppb', parameter=ParameterBase(id=15, name='no2', units='ppb', display_name='NO₂')),\n",
-       "  SensorBase(id=12235581, name='o3 µg/m³', parameter=ParameterBase(id=3, name='o3', units='µg/m³', display_name='O₃ mass')),\n",
-       "  SensorBase(id=711, name='o3 µg/m³', parameter=ParameterBase(id=3, name='o3', units='µg/m³', display_name='O₃ mass')),\n",
-       "  SensorBase(id=715, name='pm10 µg/m³', parameter=ParameterBase(id=1, name='pm10', units='µg/m³', display_name='PM10')),\n",
-       "  SensorBase(id=12235582, name='pm10 µg/m³', parameter=ParameterBase(id=1, name='pm10', units='µg/m³', display_name='PM10')),\n",
-       "  SensorBase(id=12235583, name='pm25 µg/m³', parameter=ParameterBase(id=2, name='pm25', units='µg/m³', display_name='PM2.5')),\n",
-       "  SensorBase(id=714, name='pm25 µg/m³', parameter=ParameterBase(id=2, name='pm25', units='µg/m³', display_name='PM2.5')),\n",
-       "  SensorBase(id=12235584, name='relativehumidity %', parameter=ParameterBase(id=98, name='relativehumidity', units='%', display_name='RH')),\n",
-       "  SensorBase(id=12235585, name='so2 ppb', parameter=ParameterBase(id=101, name='so2', units='ppb', display_name='SO₂')),\n",
-       "  SensorBase(id=713, name='so2 µg/m³', parameter=ParameterBase(id=6, name='so2', units='µg/m³', display_name='SO₂ mass')),\n",
-       "  SensorBase(id=12235586, name='temperature c', parameter=ParameterBase(id=100, name='temperature', units='c', display_name='Temperature (C)'))],\n",
-       " 'coordinates': Coordinates(latitude=17.349694, longitude=78.451437),\n",
-       " 'bounds': [78.451437, 17.349694, 78.451437, 17.349694],\n",
+       " 'sensors': [SensorBase(id=14832, name='co µg/m³', parameter=ParameterBase(id=4, name='co', units='µg/m³', display_name='CO mass')),\n",
+       "  SensorBase(id=12235421, name='co ppb', parameter=ParameterBase(id=102, name='co', units='ppb', display_name='CO')),\n",
+       "  SensorBase(id=12235422, name='no ppb', parameter=ParameterBase(id=24, name='no', units='ppb', display_name='NO')),\n",
+       "  SensorBase(id=12235423, name='no2 ppb', parameter=ParameterBase(id=15, name='no2', units='ppb', display_name='NO₂')),\n",
+       "  SensorBase(id=14831, name='no2 µg/m³', parameter=ParameterBase(id=5, name='no2', units='µg/m³', display_name='NO₂ mass')),\n",
+       "  SensorBase(id=14715, name='o3 µg/m³', parameter=ParameterBase(id=3, name='o3', units='µg/m³', display_name='O₃ mass')),\n",
+       "  SensorBase(id=12235424, name='o3 µg/m³', parameter=ParameterBase(id=3, name='o3', units='µg/m³', display_name='O₃ mass')),\n",
+       "  SensorBase(id=14827, name='pm10 µg/m³', parameter=ParameterBase(id=1, name='pm10', units='µg/m³', display_name='PM10')),\n",
+       "  SensorBase(id=12235425, name='pm10 µg/m³', parameter=ParameterBase(id=1, name='pm10', units='µg/m³', display_name='PM10')),\n",
+       "  SensorBase(id=12235426, name='pm25 µg/m³', parameter=ParameterBase(id=2, name='pm25', units='µg/m³', display_name='PM2.5')),\n",
+       "  SensorBase(id=14826, name='pm25 µg/m³', parameter=ParameterBase(id=2, name='pm25', units='µg/m³', display_name='PM2.5')),\n",
+       "  SensorBase(id=12235427, name='relativehumidity %', parameter=ParameterBase(id=98, name='relativehumidity', units='%', display_name='RH')),\n",
+       "  SensorBase(id=12235428, name='so2 ppb', parameter=ParameterBase(id=101, name='so2', units='ppb', display_name='SO₂')),\n",
+       "  SensorBase(id=14824, name='so2 µg/m³', parameter=ParameterBase(id=6, name='so2', units='µg/m³', display_name='SO₂ mass'))],\n",
+       " 'coordinates': Coordinates(latitude=30.9028, longitude=75.8086),\n",
+       " 'bounds': [75.8086, 30.9028, 75.8086, 30.9028],\n",
        " 'distance': None,\n",
-       " 'datetime_first': Datetime(utc='2016-03-21T19:00:00Z', local='2016-03-22T00:30:00+05:30'),\n",
-       " 'datetime_last': Datetime(utc='2025-04-02T00:15:00Z', local='2025-04-02T05:45:00+05:30')}"
+       " 'datetime_first': Datetime(utc='2018-03-09T06:00:00Z', local='2018-03-09T11:30:00+05:30'),\n",
+       " 'datetime_last': Datetime(utc='2025-04-02T08:15:00Z', local='2025-04-02T13:45:00+05:30')}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "in_bbox_search_loaction.results[15].__dict__"
+    "in_bbox_search_loaction.results[69].__dict__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +844,7 @@
        " 3443112: 'WeatherFlow-Tempest Office'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +869,7 @@
        "716"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
