--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x7f3d52572cf0>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7f13b82c8c70>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,12 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'con' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcon\u001b[49m\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124m        CREATE TABLE IF NOT EXISTS raw.air_quality_data(\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m        location_id BIGINT,\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124m        sensors_id BIGINT,\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlocation\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m VARCHAR,\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatetime\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m TIMESTAMP,\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124m        lat DOUBLE,\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124m        lon DOUBLE,\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m VARCHAR,\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124m        units VARCHAR,\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m DOUBLE,\u001b[39m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmonth\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m VARCHAR,\u001b[39m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myear\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m BIGINT,\u001b[39m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;124m        ingestion_datetime TIMESTAMP\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;124m        );\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'con' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "con.sql(\"\"\"\n",
-    "        CREATE TABLE IF NOT EXISTED raw,air_quality_data(\n",
+    "con.execute(\"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS raw.air_quality_data(\n",
     "        location_id BIGINT,\n",
     "        sensors_id BIGINT,\n",
     "        \"location\" VARCHAR,\n",
@@ -65,11 +77,77 @@
     "        units VARCHAR,\n",
     "        \"value\" DOUBLE,\n",
     "        \"month\" VARCHAR,\n",
-    "        \"year\" BEGINT,\n",
+    "        \"year\" BIGINT,\n",
     "        ingestion_datetime TIMESTAMP\n",
     "        );\n",
     "        \"\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9aebe049382432e82c6d4ed5129f66b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7f13b82c8c70>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con.execute(\"\"\"\n",
+    "    INSERT INTO raw.air_quality_data\n",
+    "    SELECT\n",
+    "    location_id,\n",
+    "        sensors_id,\n",
+    "        \"location\",\n",
+    "        \"datetime\",\n",
+    "        lat,\n",
+    "        lon,\n",
+    "        \"parameter\",\n",
+    "        units,\n",
+    "        \"value\",\n",
+    "        \"month\",\n",
+    "        \"year\",\n",
+    "        current_timestamp AS ingestion_datetime \n",
+    "        FROM read_csv('s3://openaq-data-archive/records/csv.gz/locationid=5569/year=2025/month=03/*.csv.gz');\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
