--- a/notebooks/api-exploration.ipynb
+++ b/notebooks/api-exploration.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "from openaq import OpenAQ"
+    "from openaq import OpenAQ\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/workspace/Air-quality-dashboard/secrets.json\") as f:\n",
+    "with open(\"/home/abhishek/Desktop/Data_Science/Air-quality-dashboard/secrets.json\") as f:\n",
     "    secrets = json.load(f)\n",
     "    f.close()\n",
     "\n",
@@ -25,16 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<openaq._sync.client.OpenAQ at 0x7f6d1856f620>"
+       "<openaq._sync.client.OpenAQ at 0x7f1cfcc7cd50>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "Meta(name='openaq-api', website='/', page=1, limit=1000, found=716)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -106,10 +106,10 @@
        " 'bounds': [75.8086, 30.9028, 75.8086, 30.9028],\n",
        " 'distance': None,\n",
        " 'datetime_first': Datetime(utc='2018-03-09T06:00:00Z', local='2018-03-09T11:30:00+05:30'),\n",
-       " 'datetime_last': Datetime(utc='2025-04-02T08:15:00Z', local='2025-04-02T13:45:00+05:30')}"
+       " 'datetime_last': Datetime(utc='2025-04-03T00:15:00Z', local='2025-04-03T05:45:00+05:30')}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        " 3443112: 'WeatherFlow-Tempest Office'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "716"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,11 +880,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/workspace/Air-quality-dashboard/locations.json\" ,\"w\", encoding= \"utf-8\")as f:\n",
+    "with open(\"locations.json\" ,\"w\", encoding= \"utf-8\")as f:\n",
     "    json.dump(locations_info, f ,ensure_ascii= False, indent= 4)\n",
     "\n",
     "    f.close()"
@@ -900,7 +900,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -914,7 +914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
