--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -13,7 +13,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5af497a8c2e740c3a02aebba62220c14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ddb.sql(\"INSTALL httpfs; LOAD httpfs\")"
    ]
@@ -24,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = ddb.connect(\"/workspace/Air-quality-dashboard/air_quality.db\")"
+    "con = ddb.connect(\"air_quality.db\")"
    ]
   },
   {
@@ -35,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x7f13b82c8c70>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7fb60da0f8b0>"
       ]
      },
      "execution_count": 4,
@@ -49,19 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'con' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcon\u001b[49m\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124m        CREATE TABLE IF NOT EXISTS raw.air_quality_data(\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m        location_id BIGINT,\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124m        sensors_id BIGINT,\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlocation\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m VARCHAR,\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatetime\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m TIMESTAMP,\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124m        lat DOUBLE,\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124m        lon DOUBLE,\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m VARCHAR,\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124m        units VARCHAR,\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m DOUBLE,\u001b[39m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmonth\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m VARCHAR,\u001b[39m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myear\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m BIGINT,\u001b[39m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;124m        ingestion_datetime TIMESTAMP\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;124m        );\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'con' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7fb60da0f8b0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -85,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9aebe049382432e82c6d4ed5129f66b",
+       "model_id": "a4b04e8d251b48e7a152fcbadedec7a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,10 +119,10 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x7f13b82c8c70>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7fb60da0f8b0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -166,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
