--- a/notebooks/data_quality_check.ipynb
+++ b/notebooks/data_quality_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IOException",
-     "evalue": "IO Error: Could not set lock on file \"/home/abhishek/Desktop/Data_Science/Air-quality-dashboard/notebooks/air_quality.db\": Conflicting lock is held in /usr/share/dbeaver-ce/jre/bin/java (PID 4088) by user abhishek. See also https://duckdb.org/docs/connect/concurrency",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIOException\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m con = \u001b[43mddb\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mair_quality.db\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m con\n",
-      "\u001b[31mIOException\u001b[39m: IO Error: Could not set lock on file \"/home/abhishek/Desktop/Data_Science/Air-quality-dashboard/notebooks/air_quality.db\": Conflicting lock is held in /usr/share/dbeaver-ce/jre/bin/java (PID 4088) by user abhishek. See also https://duckdb.org/docs/connect/concurrency"
-     ]
+     "data": {
+      "text/plain": [
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7ff0f1828970>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -776,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
