--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -13,22 +13,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5af497a8c2e740c3a02aebba62220c14",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ddb.sql(\"INSTALL httpfs; LOAD httpfs\")"
    ]
@@ -50,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x7fb60da0f8b0>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7f5288ca39b0>"
       ]
      },
      "execution_count": 4,
@@ -70,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x7fb60da0f8b0>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7f5288ca39b0>"
       ]
      },
      "execution_count": 5,
@@ -105,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4b04e8d251b48e7a152fcbadedec7a8",
+       "model_id": "5a6540ee6355466ba48478d72cf87ba2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x7fb60da0f8b0>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7f5288ca39b0>"
       ]
      },
      "execution_count": 6,
