--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -35,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x7f5288ca39b0>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7fd1a20ddfb0>"
       ]
      },
      "execution_count": 4,
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x7f5288ca39b0>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7fd1a20ddfb0>"
       ]
      },
      "execution_count": 5,
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a6540ee6355466ba48478d72cf87ba2",
+       "model_id": "e750ffcf4e394694a5ca5d90bbc0ec55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x7f5288ca39b0>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7fd1a20ddfb0>"
       ]
      },
      "execution_count": 6,
@@ -151,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
